--- a/YouTube Clone/styles/General.css
+++ b/YouTube Clone/styles/General.css
@@ -3,3 +3,10 @@
   padding: 0;
   font-family: Roboto, Arial;
 }
+
+body {
+  padding-top: 80px;
+  padding-left: 90px;
+  padding-right: 24px;
+  background-color: rgb(248, 248, 248);
+}
