--- a/Amazon Clone/styles/General.css
+++ b/Amazon Clone/styles/General.css
@@ -4,3 +4,8 @@
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+body {
+  background-color: #E3E6E6;
+  padding-top: 60px;
+}
