--- a/Amazon Clone/styles/header.css
+++ b/Amazon Clone/styles/header.css
@@ -4,6 +4,11 @@
   color: white;
   display: flex;
   align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
 }
 .left {
   display: flex;
