Landing page completed

--- a/Amazon Clone/styles/footer.css
+++ b/Amazon Clone/styles/footer.css
@@ -54,3 +54,36 @@ ul a{
 a:hover {
   text-decoration: underline;
 }
+
+.footer-amazon-logo {
+  height: 80px;
+  background-color: #232F3e;
+  border-top: 1px solid gray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-amazon-logo img {
+  height: 70%;
+}
+
+.footer-last-section {
+  height: 80px;
+  background-color: #131A22;
+  text-align: center;
+}
+
+.footer-last-section ul a {
+  margin-top: 20px;
+  display: inline-block;
+  color: #DDDDDD;
+  font-size: 12px;
+  padding: 0 6px;
+}
+
+.footer-last-section span {
+  font-size: 12px;
+  color: #DDDDDD;
+}
+
